<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="raphael.norwitz.squiggy.receiver.Setup"
    tools:showIn="@layout/activity_setup">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/run_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:labelFor="@string/setup_transfer"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/directory"
            />
        <EditText
            android:id="@+id/target_dir"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packet_val"
            />
        <EditText
            android:id="@+id/pkt_len"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security"
            />
        <EditText
            android:id="@+id/security_cde"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port"
            />
        <EditText
            android:id="@+id/host_port"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="number" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/host_string"
            />
        <EditText
            android:id="@+id/host_ip"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="text" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_files"
            />
        <EditText
            android:id="@+id/number_files"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="number" />
    </LinearLayout>


</RelativeLayout>
